# kernel

./: .gitignore  .lldbinit  Cargo.toml  GNUmakefile  build.rs  limine.conf  package-lock.json  rustfmt.toml
.cargo/: config.toml
kernel/: Cargo.toml  GNUmakefile  linker-x86_64.ld
kernel/src/: gdt.rs  idt.rs  interrupts.rs  lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: acpi.rs  apic.rs  gdt.rs  idt.rs  mod.rs
kernel/src/common/: color.rs
kernel/src/drivers/: framebuffer.rs  keyboard.rs  mod.rs  serial_monitor.rs
kernel/src/io/: acpi.rs  apic.rs  framebuffer.rs  keyboard.rs  mod.rs  serial_monitor.rs
kernel/src/mem/: frame_allocator.rs  heap.rs  mod.rs
kernel/src/tasks/: executor.rs
src/: main.rs
