[package]
name = "osdev"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bootloader = "0.11.13"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = ["kernel"]

[target.x86_64-unknown-none]
rustflags = ["-g"]