[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
bench = false
test = false

[dependencies]
x86_64 = "0.15"
bootloader_api = "0.11.13"
noto-sans-mono-bitmap = { version = "0.3", features = ["size_20", "unicode-specials"] }
spin = "0.10.0"
acpi = "6.0.1"
talc = "4.4.3"
x2apic = "0.5.0"
crossbeam-queue = {version = "0.3.12", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.31", default-features = false, features = ["alloc"]}
pc-keyboard = "0.8.0"

